--- a/PhantasmaMail/PhantasmaMail/Views/InboxView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/InboxView.xaml
@@ -80,7 +80,7 @@
             </sfpullToRefresh:SfPullToRefresh>
 
 
-            <Grid Grid.Row="1" IsVisible="False" Margin="10,20">
+            <Grid Grid.Row="1" VerticalOptions="CenterAndExpand" IsVisible="False" Margin="10,5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
