--- a/PhantasmaMail/PhantasmaMail/Views/SentView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/SentView.xaml
@@ -65,7 +65,7 @@
                 </syncfusion:SfListView.ItemTemplate>
             </syncfusion:SfListView>
 
-            <Grid Grid.Row="1" IsVisible="False" Margin="10,20">
+            <Grid Grid.Row="1" VerticalOptions="CenterAndExpand" IsVisible="False" Margin="10,5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
