--- a/PhantasmaMail/PhantasmaMail/Views/RegisterBoxView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/RegisterBoxView.xaml
@@ -1,35 +1,71 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:markupExtensions="clr-namespace:PhantasmaMail.MarkupExtensions;assembly=PhantasmaMail"
              xmlns:xfx="clr-namespace:Xfx;assembly=Xfx.Controls"
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              x:Class="PhantasmaMail.Views.RegisterBoxView"
              BackgroundImage="BackgroundLogin.png">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="RegisterBoxLabelStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="#FFFFFF" />
+                <Setter Property="FontSize" Value="{StaticResource MediumSize}" />
+                <Setter Property="FontFamily" Value="{StaticResource OpenSansSemiBoldLabelStyle}" />
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout VerticalOptions="CenterAndExpand" Margin="30">
 
-            <Label Text="You don't have an email registered in your address" 
-                   HorizontalTextAlignment="Center"
+        <Grid VerticalOptions="FillAndExpand"
+              HorizontalOptions="FillAndExpand"
+              Margin="30">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-                   Style="{StaticResource SwitchBarLabelStyle}"/>
+            <ActivityIndicator Grid.Row="0" Grid.RowSpan="3" IsRunning="{Binding IsBusy}"
+                               HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Color="White" />
 
-            <Label Text="You have to create one to use the Phantasma App" 
-                   HorizontalTextAlignment="Center"
-                   Style="{StaticResource SwitchBarLabelStyle}"/>
+            <ffimageloading:CachedImage Grid.Row="1" Source="phantasma_logo_vector.png" WidthRequest="90"
+                                        HeightRequest="75"
+                                        Margin="0,40,0,10" />
 
-            <xfx:XfxEntry Style="{StaticResource LoginStyle}"
-                          FloatingHintEnabled="True"
-                          HorizontalOptions="FillAndExpand"
-                          Placeholder="Email address" IsPassword="False"
-                          Text="{Binding BoxName}" />
+            <Label Grid.Row="2" Text="Phantasma" FontSize="{StaticResource ExtraBigSize}" TextColor="White"
+                   FontFamily="{StaticResource GeoMedium}"
+                   HorizontalTextAlignment="Center" />
 
-            <Button Text="Create" 
-                    VerticalOptions="EndAndExpand" Margin="30"
-                    HorizontalOptions="FillAndExpand"
-                    Style="{StaticResource ButtonStyle}"
-                    TextColor="#8AA8A3"
-                    Command="{Binding CreateBoxCommand}" />
 
-        </StackLayout>
+            <Grid Grid.Row="3" VerticalOptions="EndAndExpand" IsVisible="{Binding IsBusy,Converter={StaticResource InverseBooleanConverter}}" RowSpacing="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Label Grid.Row="0" Text="Unfortunately you don't have a registred box. Create one to use Phantasma."
+                       HorizontalTextAlignment="Center"
+                       Style="{StaticResource RegisterBoxLabelStyle}" />
+
+                <xfx:XfxEntry Grid.Row="1" Style="{StaticResource LoginStyle}"
+                              FloatingHintEnabled="True"
+                              HorizontalOptions="FillAndExpand"
+                              Placeholder="Box Name" IsPassword="False"
+                              Text="{Binding BoxName}" />
+
+                <Button Grid.Row="2" Text="Create a box"
+                        VerticalOptions="EndAndExpand" Margin="1,20"
+                        HorizontalOptions="FillAndExpand"
+                        Style="{StaticResource ButtonStyle}"
+                        TextColor="#8AA8A3"
+                        Command="{Binding CreateBoxCommand}" />
+
+            </Grid>
+
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
