--- a/PhantasmaMail/PhantasmaMail/Views/ComposeView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/ComposeView.xaml
@@ -17,7 +17,7 @@
             <Style x:Key="CustomEntryStyle" TargetType="xfx:XfxEntry">
                 <Setter Property="FontSize" Value="{StaticResource MidMediumSize}" />
                 <Setter Property="FontFamily" Value="{StaticResource OpenSansSemiBold}" />
-                <Setter Property="PlaceholderColor" Value="{StaticResource LightGray}" /> 
+                <Setter Property="PlaceholderColor" Value="{StaticResource LightGray}" />
                 <Setter Property="ActivePlaceholderColor" Value="{StaticResource LightBlueGreen }" />
             </Style>
 
@@ -32,11 +32,11 @@
             </Grid.RowDefinitions>
 
             <Frame Grid.Row="0"
-                   Margin="20"
+                   Margin="20,20,20,0"
                    Padding="0"
                    HorizontalOptions="FillAndExpand"
                    VerticalOptions="FillAndExpand">
-                <Grid Margin="20">
+                <Grid Margin="20" RowSpacing="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -57,7 +57,7 @@
                                   Placeholder="Subject:"
                                   Text="{Binding Message.Subject}" />
 
-                    <controls:ExpandableEditor Grid.Row="2"
+                    <controls:ExpandableEditor Grid.Row="2" 
                                                FontFamily="{StaticResource OpenSansRegular}"
                                                TextColor="{StaticResource LightGray}"
                                                FontSize="{StaticResource MidMediumSize}"
@@ -65,53 +65,56 @@
                 </Grid>
             </Frame>
 
-            <Grid Grid.Row="1" Margin="10">
+            <Grid Grid.Row="1" Margin="20,5,20,10" ColumnSpacing="25">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <!-- Exit -->
-                <ffimageloadingsvg:SvgCachedImage VerticalOptions="Center" HorizontalOptions="Center" Source="X.svg"
-                                                  Grid.Column="0" HeightRequest="30"
-                                                  WidthRequest="30">
-                    <ffimageloadingsvg:SvgCachedImage.Transformations>
-                        <fftransformations:TintTransformation EnableSolidColor="true"
-                                                              HexColor="{StaticResource TintIconColor}" />
-                    </ffimageloadingsvg:SvgCachedImage.Transformations>
-                    <ffimageloadingsvg:SvgCachedImage.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding NavigateToInboxCommand}" />
-                    </ffimageloadingsvg:SvgCachedImage.GestureRecognizers>
-                </ffimageloadingsvg:SvgCachedImage>
+                <Grid Grid.Column="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <ffimageloadingsvg:SvgCachedImage VerticalOptions="Center" HorizontalOptions="Start"
+                                                      Source="arrow.svg"
+                                                      Grid.Column="0" HeightRequest="20"
+                                                      WidthRequest="28">
+                        <ffimageloadingsvg:SvgCachedImage.Transformations>
+                            <fftransformations:TintTransformation EnableSolidColor="true"
+                                                                  HexColor="{StaticResource TintIconColor}" />
+                        </ffimageloadingsvg:SvgCachedImage.Transformations>
+                    </ffimageloadingsvg:SvgCachedImage>
+                    <Label Grid.Column="1" VerticalTextAlignment="Center" Style="{StaticResource NoMessagesLabelStyle}"
+                           HorizontalTextAlignment="Start"
+                           Text="Send" />
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding SendMessageCommand}"/>
+                    </Grid.GestureRecognizers>
+                </Grid>
 
-                <!-- Send -->
-                <ffimageloadingsvg:SvgCachedImage VerticalOptions="Center" HorizontalOptions="Center" Source="send.svg"
-                                                  Grid.Column="1" HeightRequest="30"
-                                                  WidthRequest="30">
-                    <ffimageloadingsvg:SvgCachedImage.Transformations>
-                        <fftransformations:TintTransformation EnableSolidColor="true"
-                                                              HexColor="{StaticResource TintIconColor}" />
-                    </ffimageloadingsvg:SvgCachedImage.Transformations>
-                    <ffimageloadingsvg:SvgCachedImage.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding SendMessageCommand}" />
-                    </ffimageloadingsvg:SvgCachedImage.GestureRecognizers>
-                </ffimageloadingsvg:SvgCachedImage>
-
-                <!-- Attach -->
-                <ffimageloadingsvg:SvgCachedImage VerticalOptions="Center" HorizontalOptions="Center"
-                                                  Source="paperclip.svg"
-                                                  Grid.Column="2" HeightRequest="30"
-                                                  WidthRequest="30">
-                    <ffimageloadingsvg:SvgCachedImage.Transformations>
-                        <fftransformations:TintTransformation EnableSolidColor="true"
-                                                              HexColor="{StaticResource TintIconColor}" />
-                    </ffimageloadingsvg:SvgCachedImage.Transformations>
-                    <ffimageloadingsvg:SvgCachedImage.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding AttachFileCommand}" />
-                    </ffimageloadingsvg:SvgCachedImage.GestureRecognizers>
-                </ffimageloadingsvg:SvgCachedImage>
-
+                <Grid Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <ffimageloadingsvg:SvgCachedImage VerticalOptions="Center" HorizontalOptions="Start"
+                                                      Source="paperclip.svg"
+                                                      Grid.Column="0" HeightRequest="20"
+                                                      WidthRequest="28">
+                        <ffimageloadingsvg:SvgCachedImage.Transformations>
+                            <fftransformations:TintTransformation EnableSolidColor="true"
+                                                                  HexColor="{StaticResource TintIconColor}" />
+                        </ffimageloadingsvg:SvgCachedImage.Transformations>
+                    </ffimageloadingsvg:SvgCachedImage>
+                    <Label Grid.Column="1"  Style="{StaticResource NoMessagesLabelStyle}"
+                           HorizontalTextAlignment="Start" VerticalTextAlignment="Center"
+                           Text="Attachments" />
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding AttachFileCommand}"/>
+                    </Grid.GestureRecognizers>
+                </Grid>
             </Grid>
 
         </Grid>
