--- a/PhantasmaMail/PhantasmaMail/Views/InboxMessageDetailView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/InboxMessageDetailView.xaml
@@ -2,7 +2,7 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PhantasmaMail.Views.MessageDetailView"
+             x:Class="PhantasmaMail.Views.InboxMessageDetailView"
              xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
              xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
              Title="Message"
