--- a/PhantasmaMail/PhantasmaMail/Views/MessageDetailView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/MessageDetailView.xaml
@@ -2,7 +2,7 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PhantasmaMail.Views.InboxMessageDetailView"
+             x:Class="PhantasmaMail.Views.MessageDetailView"
              xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
              xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
              Title="Message"
@@ -43,48 +43,55 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="1" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="1" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" Text="From: "
-                           Style="{StaticResource SenderNameTextStyle}" TextColor="{StaticResource LightGray}" />
+                    <Label Grid.Row="0" Text="{Binding FromOrTo}"
+                           Style="{StaticResource SenderNameTextStyle}" TextColor="{StaticResource LightGray}" FontFamily="{StaticResource OpenSansSemiBold}"/>
 
                     <Label Grid.Row="1" Text="{Binding SelectedMessage.FromAddress}"
-                           Style="{StaticResource SenderNameTextStyle}"  />
+                           Style="{StaticResource SenderNameTextStyle}" IsVisible="{Binding FromInbox}" />
 
-                    <Label Grid.Row="2" Text="To: "
+                    <Label Grid.Row="1" Text="{Binding SelectedMessage.ToAddress}"
+                           Style="{StaticResource SenderNameTextStyle}" IsVisible="{Binding FromInbox,Converter={StaticResource InverseBooleanConverter}}" />
+
+                    <!--<Label Grid.Row="2" Text="To: "
                            Style="{StaticResource SenderNameTextStyle}" TextColor="{StaticResource LightGray}" />
 
                     <Label Grid.Row="3" Text="{Binding SelectedMessage.ToAddress}"
-                           Style="{StaticResource SenderNameTextStyle}"  />
+                           Style="{StaticResource SenderNameTextStyle}"  />-->
 
-                    <BoxView Grid.Row="4"
+                    <BoxView Grid.Row="2"
                              HorizontalOptions="FillAndExpand"
                              BackgroundColor="{StaticResource SeparatorGray}" />
 
-                    <Label Grid.Row="5" Text="{Binding SelectedMessage.Subject}"
+                    <Label Grid.Row="3" Text="{Binding SelectedMessage.Subject}"
                            Margin="0,4"
-                           Style="{StaticResource SenderNameTextStyle}" FontSize="{StaticResource LargeSize}"
+                           Style="{StaticResource SenderNameTextStyle}" FontSize="{StaticResource LargeSize}" TextColor="{StaticResource DarkBlueGreen}"
                            FontFamily="{StaticResource OpenSansSemiBold}" />
 
-                    <ScrollView Grid.Row="6">
+                    <ScrollView Grid.Row="4">
                         <Label Text="{Binding SelectedMessage.TextContent}"
                                Style="{StaticResource SimpleTextStyle}" />
                     </ScrollView>
 
 
-                    <BoxView Grid.Row="7"
+                    <StackLayout Grid.Row="5" IsVisible="{Binding FromInbox, Converter={StaticResource InverseBooleanConverter}}">
+                        <Label Text="/TxHash"/>
+                        <Label Text="61108106e16321baa24b1728b1e6e782e39430215a98477319bdec021d892499"/>
+                    </StackLayout>
+
+                    <BoxView Grid.Row="6"
                              HorizontalOptions="FillAndExpand"
                              BackgroundColor="{StaticResource SeparatorGray}" />
 
 
-                    <StackLayout Grid.Row="8" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+                    <StackLayout Grid.Row="7" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
 
                         <Label Text="{Binding DaysAgo}" HorizontalOptions="Start" VerticalOptions="Center"
                                Style="{StaticResource SimpleTextStyle}" FontSize="{StaticResource LittleSize}" />
@@ -93,9 +100,9 @@
                                Style="{StaticResource SimpleTextStyle}" FontSize="{StaticResource LittleSize}" />
 
                     </StackLayout>
-                  
 
-                  
+
+
                 </Grid>
             </Frame>
             <Grid Grid.Row="1" Margin="10">
